homeWork2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedyiv-otus-hw2-service
spec:
  selector:
    app: fedyiv-otus-hw2-app
  ports:
    - protocol: TCP
      port: 9001
      targetPort: web
  type: NodePort
