homeWork2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fedyiv-otus-hw2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/cache-enable: "false"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/fedyiv(/|$)(.*)
            backend:
              serviceName: fedyiv-otus-hw2-service
              servicePort: 9001
